Initial commit on new approach

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,3 +1,20 @@
 ${project.parent.artifactId}.title=Disa
+${project.parent.artifactId}.map.identifiers=Mapear Identificadores
 ${project.parent.artifactId}.manage=Query Viral Load Results
 ${project.parent.artifactId}.list.viral.load.results=List Viral Load Results
+${project.parent.artifactId}.mapidentifiers=Map Identifiers
+${project.parent.artifactId}.viral.load.status=Viral Load Status
+${project.parent.artifactId}.viral.load.status.processed=PROCESSED
+${project.parent.artifactId}.viral.load.status.not_processed=NOT PROCESSED
+${project.parent.artifactId}.submit=Submit
+${project.parent.artifactId}.nid=NID
+${project.parent.artifactId}.gender=Gender
+${project.parent.artifactId}.age=Age
+${project.parent.artifactId}.request.id=Request ID
+${project.parent.artifactId}.viralload.result.copy= Viral Load Copy
+${project.parent.artifactId}.viralload.result.log= Viral Load Log
+${project.parent.artifactId}.viralload.result.coded= Viral Load Coded
+${project.parent.artifactId}.map.nid=Map NID
+${project.parent.artifactId}.btn.export=Export
+${project.parent.artifactId}.select.viral.load.status=Select viral load status
+${project.parent.artifactId}.openmrs.list.patients=Patients in OpenMRS
