DOI-25: Map Disa to OpenMRS NID

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -18,3 +18,7 @@ ${project.parent.artifactId}.map.nid=Map NID
 ${project.parent.artifactId}.btn.export=Export
 ${project.parent.artifactId}.select.viral.load.status=Select viral load status
 ${project.parent.artifactId}.openmrs.list.patients=Patients in OpenMRS
+${project.parent.artifactId}.patient=Patient from Disa
+${project.parent.artifactId}.btn.map=Map
+${project.parent.artifactId}.select.patient=Select patient to map
+${project.parent.artifactId}.no.viral.load=No viral load results with status 
