--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -17,3 +17,6 @@ ${project.parent.artifactId}.btn.export=Exportar
 ${project.parent.artifactId}.select.viral.load.status=Seleccione o estado de carga viral
 ${project.parent.artifactId}.openmrs.list.patients=Pacientes no OpenMRS
 ${project.parent.artifactId}.patient=Paciente do Disa
+${project.parent.artifactId}.btn.map=Mapear
+${project.parent.artifactId}.select.patient=Seleccione um paciente para mapeamento
+${project.parent.artifactId}.no.viral.load=Não existem resultados de carga viral com status 
