--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -4,8 +4,8 @@ ${project.parent.artifactId}.manage=Query Viral Load Results
 ${project.parent.artifactId}.list.viral.load.results=List Viral Load Results
 ${project.parent.artifactId}.mapidentifiers=Map Identifiers
 ${project.parent.artifactId}.viral.load.status=Viral Load Status
-${project.parent.artifactId}.viral.load.status.processed=PROCESSED
-${project.parent.artifactId}.viral.load.status.not_processed=NOT PROCESSED
+${project.parent.artifactId}.viral.load.status.PROCESSED=PROCESSED
+${project.parent.artifactId}.viral.load.status.NOT_PROCESSED=NOT PROCESSED
 ${project.parent.artifactId}.submit=Submit
 ${project.parent.artifactId}.nid=NID
 ${project.parent.artifactId}.gender=Gender
@@ -22,3 +22,10 @@ ${project.parent.artifactId}.patient=Patient from Disa
 ${project.parent.artifactId}.btn.map=Map
 ${project.parent.artifactId}.select.patient=Select patient to map
 ${project.parent.artifactId}.no.viral.load=No viral load results with status 
+${project.parent.artifactId}.start.date=Start Date
+${project.parent.artifactId}.end.date=End Date
+${project.parent.artifactId}.error.startDate=Start date must be informed
+${project.parent.artifactId}.error.endDate=End date must be informed
+${project.parent.artifactId}.NID_NOT_FOUND=NID does not exist in OpenMRS
+${project.parent.artifactId}.NO_RESULT=FSR has no results
+${project.parent.artifactId}.error.patient.required=Select patient to add
