--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -1,8 +1,8 @@
 ${project.parent.artifactId}.title=Disa
 ${project.parent.artifactId}.map.identifiers=Mapear Identificadores
 ${project.parent.artifactId}.viral.load.status=Estado de Carga Viral
-${project.parent.artifactId}.viral.load.status.processed=PROCESSADO
-${project.parent.artifactId}.viral.load.status.not_processed=NÃO PROCESSADO
+${project.parent.artifactId}.viral.load.status.PROCESSED=PROCESSADO
+${project.parent.artifactId}.viral.load.status.NOT_PROCESSED=NÃO PROCESSADO
 ${project.parent.artifactId}.list.viral.load.results=Resultados de Carga Viral
 ${project.parent.artifactId}.submit=Submeter
 ${project.parent.artifactId}.nid=NID
@@ -20,3 +20,11 @@ ${project.parent.artifactId}.patient=Paciente do Disa
 ${project.parent.artifactId}.btn.map=Mapear
 ${project.parent.artifactId}.select.patient=Seleccione um paciente para mapeamento
 ${project.parent.artifactId}.no.viral.load=Não existem resultados de carga viral com status 
+${project.parent.artifactId}.start.date=Data Inicial
+${project.parent.artifactId}.end.date=Data Final
+${project.parent.artifactId}.error.startDate=Data inicial deve ser informada
+${project.parent.artifactId}.error.endDate=Data final deve ser informada
+${project.parent.artifactId}.not.processing.cause=Causa de Não Processamento
+${project.parent.artifactId}.NID_NOT_FOUND=NID inexistente no OpenMRS
+${project.parent.artifactId}.NO_RESULT=FSR sem resultados
+${project.parent.artifactId}.error.patient.required=Seleccione o paciente a adicionar
