DOI-30: Add pagination on DISA to OpenMRS NID mapping tables and improvements

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
 ${project.parent.artifactId}.title=Disa
-${project.parent.artifactId}.map.identifiers=Mapear Identificadores
+${project.parent.artifactId}.map.identifiers=Map Identifiers
 ${project.parent.artifactId}.manage=Query Viral Load Results
 ${project.parent.artifactId}.list.viral.load.results=List Viral Load Results
 ${project.parent.artifactId}.mapidentifiers=Map Identifiers
@@ -26,6 +26,7 @@ ${project.parent.artifactId}.start.date=Start Date
 ${project.parent.artifactId}.end.date=End Date
 ${project.parent.artifactId}.error.startDate=Start date must be informed
 ${project.parent.artifactId}.error.endDate=End date must be informed
+${project.parent.artifactId}.not.processing.cause=Cause for Not Processing
 ${project.parent.artifactId}.NID_NOT_FOUND=NID does not exist in OpenMRS
 ${project.parent.artifactId}.NO_RESULT=FSR has no results
 ${project.parent.artifactId}.error.patient.required=Select patient to add
