Front-End programming for the staging server search engine

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -2,6 +2,7 @@ ${project.parent.artifactId}.title=Disa
 ${project.parent.artifactId}.map.identifiers=Map Identifiers
 ${project.parent.artifactId}.manage=Query Viral Load Results
 ${project.parent.artifactId}.list.viral.load.results=List Viral Load Results
+${project.parent.artifactId}.list.viral.load.results.staging.server=List Viral Load Results - Staging Server
 ${project.parent.artifactId}.mapidentifiers=Map Identifiers
 ${project.parent.artifactId}.viral.load.status=Viral Load Status
 ${project.parent.artifactId}.viral.load.status.PROCESSED=PROCESSED
@@ -30,3 +31,4 @@ ${project.parent.artifactId}.not.processing.cause=Cause for Not Processing
 ${project.parent.artifactId}.NID_NOT_FOUND=NID does not exist in OpenMRS
 ${project.parent.artifactId}.NO_RESULT=FSR has no results
 ${project.parent.artifactId}.error.patient.required=Select patient to add
+${project.parent.artifactId}.error.requestId=The unique identifier of the sample must be informed
