--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -4,6 +4,7 @@ ${project.parent.artifactId}.viral.load.status=Estado de Carga Viral
 ${project.parent.artifactId}.viral.load.status.PROCESSED=PROCESSADO
 ${project.parent.artifactId}.viral.load.status.NOT_PROCESSED=NÃO PROCESSADO
 ${project.parent.artifactId}.list.viral.load.results=Resultados de Carga Viral
+${project.parent.artifactId}.list.viral.load.results.staging.server=Resultados de Carga Viral - Staging Server
 ${project.parent.artifactId}.submit=Submeter
 ${project.parent.artifactId}.nid=NID
 ${project.parent.artifactId}.gender=Sexo
@@ -28,3 +29,5 @@ ${project.parent.artifactId}.not.processing.cause=Causa de Não Processamento
 ${project.parent.artifactId}.NID_NOT_FOUND=NID inexistente no OpenMRS
 ${project.parent.artifactId}.NO_RESULT=FSR sem resultados
 ${project.parent.artifactId}.error.patient.required=Seleccione o paciente a adicionar
+${project.parent.artifactId}.error.requestId=O identificador único da amostra deve ser informado
+${project.parent.artifactId}.requestId=Identificador único da requisição
