--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -7,6 +7,17 @@ ${project.parent.artifactId}.mapidentifiers=Map Identifiers
 ${project.parent.artifactId}.viral.load.status=Viral Load Status
 ${project.parent.artifactId}.viral.load.status.PROCESSED=PROCESSED
 ${project.parent.artifactId}.viral.load.status.NOT_PROCESSED=NOT PROCESSED
+${project.parent.artifactId}.viral.load.status.PENDING=PENDING
+${project.parent.artifactId}.status=Status
+${project.parent.artifactId}.location=Location
+${project.parent.artifactId}.analysis.date.time=Analysis Date
+${project.parent.artifactId}.authorised.date.time=Authorised Date
+${project.parent.artifactId}.sisma.code=SISMA Code
+${project.parent.artifactId}.requesting.facility.name=Requisition Health Unit
+${project.parent.artifactId}.requesting.district.name=Requisition District
+${project.parent.artifactId}.referring.request.id=Order number
+${project.parent.artifactId}.created.at=Created on Staging Server
+${project.parent.artifactId}.updated.at=Updated on Staging Server
 ${project.parent.artifactId}.submit=Submit
 ${project.parent.artifactId}.nid=NID
 ${project.parent.artifactId}.gender=Gender
@@ -22,7 +33,8 @@ ${project.parent.artifactId}.openmrs.list.patients=Patients in OpenMRS
 ${project.parent.artifactId}.patient=Patient from Disa
 ${project.parent.artifactId}.btn.map=Map
 ${project.parent.artifactId}.select.patient=Select patient to map
-${project.parent.artifactId}.no.viral.load=No viral load results with status 
+${project.parent.artifactId}.no.viral.load=No viral load results with status
+${project.parent.artifactId}.no.viral.load.form=No viral load results for the search criterias 
 ${project.parent.artifactId}.start.date=Start Date
 ${project.parent.artifactId}.end.date=End Date
 ${project.parent.artifactId}.error.startDate=Start date must be informed
