add TODOS on SISMA and viral load status comboboxs

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -6,6 +6,7 @@ ${project.parent.artifactId}.list.viral.load.results.staging.server=List Viral L
 ${project.parent.artifactId}.mapidentifiers=Map Identifiers
 ${project.parent.artifactId}.viral.load.status=Viral Load Status
 ${project.parent.artifactId}.viral.load.status.PROCESSED=PROCESSED
+${project.parent.artifactId}.viral.load.status.ALL=ALL
 ${project.parent.artifactId}.viral.load.status.NOT_PROCESSED=NOT PROCESSED
 ${project.parent.artifactId}.viral.load.status.PENDING=PENDING
 ${project.parent.artifactId}.status=Status
