correct the provider id for the creation of FSR

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
-${project.parent.artifactId}.title=Disa
+${project.parent.artifactId}.title=Disa_Interoperability
 ${project.parent.artifactId}.map.identifiers=Map Identifiers
 ${project.parent.artifactId}.manage=Query Viral Load Results
 ${project.parent.artifactId}.list.viral.load.results=List Viral Load Results
