--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -1,4 +1,4 @@
-${project.parent.artifactId}.title=Disa
+${project.parent.artifactId}.title=Disa_Interoperabilidade
 ${project.parent.artifactId}.map.identifiers=Mapear Identificadores
 ${project.parent.artifactId}.viral.load.status=Estado de Carga Viral
 ${project.parent.artifactId}.viral.load.status.PROCESSED=PROCESSADO
