--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -5,14 +5,17 @@ ${project.parent.artifactId}.viral.load.status.PROCESSED=PROCESSADO
 ${project.parent.artifactId}.viral.load.status.ALL=TODOS
 ${project.parent.artifactId}.viral.load.status.NOT_PROCESSED=NÃO PROCESSADO
 ${project.parent.artifactId}.viral.load.status.PENDING=PENDENTE
-${project.parent.artifactId}.list.viral.load.results=Resultados de Carga Viral
-${project.parent.artifactId}.list.viral.load.results.staging.server=Resultados de Carga Viral - Staging Server
+${project.parent.artifactId}.list.viral.load.results=Mapeamento de NIDs de Resultados Não Processados
+${project.parent.artifactId}.lista.resultados.laboratoriais333=Lista de Resultados Laboratoriais
+${project.parent.artifactId}.list.viral.load.results.staging.server=Pesquisa de Resultados Laboratoriais
+${project.parent.artifactId}.list.viral.load.results.staging.server1=Mapeamento de NIDs de Resultados Não Processados
+${project.parent.artifactId}.pesquisa.nids.resultados.nao.processados11=Pesquisa de NIDs de Resultados Não Processados
 ${project.parent.artifactId}.submit=Submeter
 ${project.parent.artifactId}.nid=NID
 ${project.parent.artifactId}.gender=Sexo
 ${project.parent.artifactId}.age=Idade
 ${project.parent.artifactId}.request.id=ID da requisição
-${project.parent.artifactId}.viralload.result.copy=Carga Viral Cópia
+${project.parent.artifactId}.viralload.result.copy=Resultado de Carga Viral
 ${project.parent.artifactId}.viralload.result.log=Carga Viral Log
 ${project.parent.artifactId}.viralload.result.coded=Carga Viral Coded
 ${project.parent.artifactId}.status=Estado
@@ -21,15 +24,16 @@ ${project.parent.artifactId}.location=Localiz.
 ${project.parent.artifactId}.frm.location=Localiza\uFFFD\uFFFDo
 ${project.parent.artifactId}.analysis.date.time=Data de análise
 ${project.parent.artifactId}.authorised.date.time=Data de validação
-${project.parent.artifactId}.sisma.code=Código SISMA
+${project.parent.artifactId}.sisma.code=Codigo da US
 ${project.parent.artifactId}.requesting.facility.name=US de requisição
 ${project.parent.artifactId}.requesting.district.name=Distrito de requisição
-${project.parent.artifactId}.referring.request.id=Nr. de ordem
+${project.parent.artifactId}.referring.request.id=ID de referencimento
 ${project.parent.artifactId}.created.at=Criado no Staging Server
 ${project.parent.artifactId}.updated.at=Actualizado no Staging Server
 ${project.parent.artifactId}.map.nid=Mapear NID
 ${project.parent.artifactId}.btn.export=Exportar
-${project.parent.artifactId}.select.viral.load.status=Seleccione o estado de carga viral
+${project.parent.artifactId}.select.viral.load.status=Insira as datas para a pesquisa
+${project.parent.artifactId}.pesquisa.resultados.laboratoriais11=Pesquisa de Resultados Laboratoriais
 ${project.parent.artifactId}.openmrs.list.patients=Pacientes no OpenMRS
 ${project.parent.artifactId}.patient=Paciente do Disa
 ${project.parent.artifactId}.btn.map=Mapear
@@ -45,4 +49,4 @@ ${project.parent.artifactId}.NID_NOT_FOUND=NID inexistente no OpenMRS
 ${project.parent.artifactId}.NO_RESULT=FSR sem resultados
 ${project.parent.artifactId}.error.patient.required=Seleccione o paciente a adicionar
 ${project.parent.artifactId}.error.requestId=O identificador único da amostra deve ser informado
-${project.parent.artifactId}.requestId=Identificador único da requisição(PQM)
+${project.parent.artifactId}.requestId=ID da requisição
