--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,8 +1,8 @@
 ${project.parent.artifactId}.title=Disa_Interoperability
 ${project.parent.artifactId}.map.identifiers=Map Identifiers
 ${project.parent.artifactId}.manage=Query Viral Load Results
-${project.parent.artifactId}.list.viral.load.results=List Viral Load Results
-${project.parent.artifactId}.list.viral.load.results.staging.server=List Viral Load Results - Staging Server
+${project.parent.artifactId}.list.viral.load.results=Mapping of Unprocessed Results
+${project.parent.artifactId}.list.viral.load.results.staging.server=Search of Laboratory Results
 ${project.parent.artifactId}.mapidentifiers=Map Identifiers
 ${project.parent.artifactId}.viral.load.status=Viral Load Status
 ${project.parent.artifactId}.viral.load.status.PROCESSED=PROCESSED
