--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -46,7 +46,8 @@ ${project.parent.artifactId}.error.startDate=Data inicial deve ser informada
 ${project.parent.artifactId}.error.endDate=Data final deve ser informada
 ${project.parent.artifactId}.not.processing.cause=Causa de não processamento
 ${project.parent.artifactId}.NID_NOT_FOUND=NID inexistente no OpenMRS
-${project.parent.artifactId}.NO_RESULT=FSR sem resultados
+${project.parent.artifactId}.NO_RESULT=FSR sem resultado
+${project.parent.artifactId}.DUPLICATE_NID=NID duplicado no OpenMRS
 ${project.parent.artifactId}.error.patient.required=Seleccione o paciente a adicionar
 ${project.parent.artifactId}.error.requestId=O identificador único da amostra deve ser informado
 ${project.parent.artifactId}.requestId=ID da requisição
