Switch no mvc annotation driven
Use form object and validation

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -2,7 +2,9 @@ ${project.parent.artifactId}.title=Disa_Interoperability
 ${project.parent.artifactId}.map.identifiers=Map Identifiers
 ${project.parent.artifactId}.manage=Query Viral Load Results
 ${project.parent.artifactId}.list.viral.load.results=Mapping of Unprocessed Results
+${project.parent.artifactId}.lista.resultados.laboratoriais333=Laboratory Results List
 ${project.parent.artifactId}.list.viral.load.results.staging.server=Search of Laboratory Results
+${project.parent.artifactId}.list.viral.load.results.staging.server1=Not processed NIDs mapping
 ${project.parent.artifactId}.mapidentifiers=Map Identifiers
 ${project.parent.artifactId}.viral.load.status=Viral Load Status
 ${project.parent.artifactId}.viral.load.status.PROCESSED=PROCESSED
@@ -10,6 +12,7 @@ ${project.parent.artifactId}.viral.load.status.ALL=ALL
 ${project.parent.artifactId}.viral.load.status.NOT_PROCESSED=NOT PROCESSED
 ${project.parent.artifactId}.viral.load.status.PENDING=PENDING
 ${project.parent.artifactId}.status=Status
+${project.parent.artifactId}.frm.status=Result Status
 ${project.parent.artifactId}.location=Location
 ${project.parent.artifactId}.analysis.date.time=Analysis Date
 ${project.parent.artifactId}.authorised.date.time=Authorised Date
@@ -30,18 +33,23 @@ ${project.parent.artifactId}.viralload.result.coded= Viral Load Coded
 ${project.parent.artifactId}.map.nid=Map NID
 ${project.parent.artifactId}.btn.export=Export
 ${project.parent.artifactId}.select.viral.load.status=Select viral load status
+${project.parent.artifactId}.pesquisa.resultados.laboratoriais11=Search Laboratory Results
 ${project.parent.artifactId}.openmrs.list.patients=Patients in OpenMRS
 ${project.parent.artifactId}.patient=Patient from Disa
 ${project.parent.artifactId}.btn.map=Map
 ${project.parent.artifactId}.select.patient=Select patient to map
 ${project.parent.artifactId}.no.viral.load=No viral load results with status
-${project.parent.artifactId}.no.viral.load.form=No viral load results for the search criterias 
+${project.parent.artifactId}.no.viral.load.form=No viral load results for the search criterias
 ${project.parent.artifactId}.start.date=Start Date
 ${project.parent.artifactId}.end.date=End Date
-${project.parent.artifactId}.error.startDate=Start date must be informed
-${project.parent.artifactId}.error.endDate=End date must be informed
+${project.parent.artifactId}.error.startDate=Start Date must be informed
+NotNull.searchForm.startDate=Start Date must be informed
+typeMismatch.searchForm.startDate=Start Date is an invalid date
+${project.parent.artifactId}.error.endDate=End Date must be informed
+NotNull.searchForm.endDate=End Date must be informed
 ${project.parent.artifactId}.not.processing.cause=Cause for Not Processing
 ${project.parent.artifactId}.NID_NOT_FOUND=NID does not exist in OpenMRS
 ${project.parent.artifactId}.NO_RESULT=FSR has no results
 ${project.parent.artifactId}.error.patient.required=Select patient to add
 ${project.parent.artifactId}.error.requestId=The unique identifier of the sample must be informed
+${project.parent.artifactId}.requestId=Request ID
