DOI-76 Search and list VL Results
Implemented controller with search action
Added Carbon Design Grid System, used by current OpenMRS
(https://wiki.openmrs.org/pages/viewpage.action?pageId=235277496).

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -5,6 +5,7 @@ ${project.parent.artifactId}.list.viral.load.results=Mapping of Unprocessed Resu
 ${project.parent.artifactId}.lista.resultados.laboratoriais333=Laboratory Results List
 ${project.parent.artifactId}.list.viral.load.results.staging.server=Search of Laboratory Results
 ${project.parent.artifactId}.list.viral.load.results.staging.server1=Not processed NIDs mapping
+${project.parent.artifactId}.list.viral.load.results.manage=Manage VL Results
 ${project.parent.artifactId}.mapidentifiers=Map Identifiers
 ${project.parent.artifactId}.viral.load.status=Viral Load Status
 ${project.parent.artifactId}.viral.load.status.PROCESSED=PROCESSED
