--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -9,6 +9,7 @@ ${project.parent.artifactId}.list.viral.load.results=Mapeamento de NIDs de Resul
 ${project.parent.artifactId}.lista.resultados.laboratoriais333=Lista de Resultados Laboratoriais
 ${project.parent.artifactId}.list.viral.load.results.staging.server=Pesquisa de Resultados Laboratoriais
 ${project.parent.artifactId}.list.viral.load.results.staging.server1=Mapeamento de NIDs de Resultados Não Processados
+${project.parent.artifactId}.list.viral.load.results.manage=Administração de Resultados Laboratoriais
 ${project.parent.artifactId}.pesquisa.nids.resultados.nao.processados11=Pesquisa de NIDs de Resultados Não Processados
 ${project.parent.artifactId}.submit=Submeter
 ${project.parent.artifactId}.nid=NID
