DOI-73 Void VL Result

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -31,6 +31,9 @@ ${project.parent.artifactId}.request.id=Request ID
 ${project.parent.artifactId}.viralload.result.copy= Viral Load Copy
 ${project.parent.artifactId}.viralload.result.log= Viral Load Log
 ${project.parent.artifactId}.viralload.result.coded= Viral Load Coded
+${project.parent.artifactId}.viralload.delete=Delete
+${project.parent.artifactId}.viralload.delete.error=An unexpected error occurred. Please try again.
+${project.parent.artifactId}.viralload.delete.confirmation.javascript=Delete Lab Result ${requestId}?
 ${project.parent.artifactId}.map.nid=Map NID
 ${project.parent.artifactId}.btn.export=Export
 ${project.parent.artifactId}.select.viral.load.status=Select viral load status
