--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -19,6 +19,9 @@ ${project.parent.artifactId}.request.id=ID da requisição
 ${project.parent.artifactId}.viralload.result.copy=Resultado de Carga Viral
 ${project.parent.artifactId}.viralload.result.log=Carga Viral Log
 ${project.parent.artifactId}.viralload.result.coded=Carga Viral Coded
+${project.parent.artifactId}.viralload.delete=Remover
+${project.parent.artifactId}.viralload.delete.error=Ocorreu um erro inesperado. Por favor, tente novamente.
+${project.parent.artifactId}.viralload.delete.confirmation.javascript=Remover o Resultado ${requestId}?
 ${project.parent.artifactId}.status=Estado
 ${project.parent.artifactId}.frm.status=Estado da Carga Viral
 ${project.parent.artifactId}.location=Localiz.
