DOI-72 Reschedule VL Result

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -34,6 +34,7 @@ ${project.parent.artifactId}.viralload.result.coded= Viral Load Coded
 ${project.parent.artifactId}.viralload.delete=Delete
 ${project.parent.artifactId}.viralload.delete.error=An unexpected error occurred. Please try again.
 ${project.parent.artifactId}.viralload.delete.confirmation.javascript=Delete Lab Result ${requestId}?
+${project.parent.artifactId}.viralload.reschedule=Reschedule
 ${project.parent.artifactId}.map.nid=Map NID
 ${project.parent.artifactId}.btn.export=Export
 ${project.parent.artifactId}.select.viral.load.status=Select viral load status
