DOI-75 Reallocate Result NID

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -35,6 +35,7 @@ ${project.parent.artifactId}.viralload.delete=Delete
 ${project.parent.artifactId}.viralload.delete.error=An unexpected error occurred. Please try again.
 ${project.parent.artifactId}.viralload.delete.confirmation.javascript=Delete Lab Result ${requestId}?
 ${project.parent.artifactId}.viralload.reschedule=Reschedule
+${project.parent.artifactId}.viralload.reallocate=Reallocate
 ${project.parent.artifactId}.map.nid=Map NID
 ${project.parent.artifactId}.btn.export=Export
 ${project.parent.artifactId}.select.viral.load.status=Select viral load status
@@ -59,3 +60,4 @@ ${project.parent.artifactId}.DUPLICATE_NID=NID duplicated in OpenMRS
 ${project.parent.artifactId}.error.patient.required=Select patient to add
 ${project.parent.artifactId}.error.requestId=The unique identifier of the sample must be informed
 ${project.parent.artifactId}.requestId=Request ID
+NotBlank.reallocateForm.healthFacilityLabCode=The Requisition Health Unit must be informed
