--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -22,7 +22,8 @@ ${project.parent.artifactId}.viralload.result.coded=Carga Viral Coded
 ${project.parent.artifactId}.viralload.delete=Remover
 ${project.parent.artifactId}.viralload.delete.error=Ocorreu um erro inesperado. Por favor, tente novamente.
 ${project.parent.artifactId}.viralload.delete.confirmation.javascript=Remover o Resultado ${requestId}?
-${project.parent.artifactId}.viralload.reschedule=Re-agendar
+${project.parent.artifactId}.viralload.reschedule=Reagendar
+${project.parent.artifactId}.viralload.reallocate=Realocar
 ${project.parent.artifactId}.status=Estado
 ${project.parent.artifactId}.frm.status=Estado da Carga Viral
 ${project.parent.artifactId}.location=Localiz.
@@ -59,3 +60,4 @@ ${project.parent.artifactId}.DUPLICATE_NID=NID duplicado no OpenMRS
 ${project.parent.artifactId}.error.patient.required=Seleccione o paciente a adicionar
 ${project.parent.artifactId}.error.requestId=O identificador único da amostra deve ser informado
 ${project.parent.artifactId}.requestId=ID da requisição
+NotBlank.reallocateForm.healthFacilityLabCode=A US de requisição deve ser infromada
