DOI-75 Redirect to results list after reallocation

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -36,6 +36,7 @@ ${project.parent.artifactId}.viralload.delete.error=An unexpected error occurred
 ${project.parent.artifactId}.viralload.delete.confirmation.javascript=Delete Lab Result ${requestId}?
 ${project.parent.artifactId}.viralload.reschedule=Reschedule
 ${project.parent.artifactId}.viralload.reallocate=Reallocate
+${project.parent.artifactId}.viralload.reallocate.successful=Viral Load was reallocated successfully.
 ${project.parent.artifactId}.map.nid=Map NID
 ${project.parent.artifactId}.btn.export=Export
 ${project.parent.artifactId}.select.viral.load.status=Select viral load status
