DOI-71 Use EPTS instead of OpenMRS

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -41,7 +41,7 @@ ${project.parent.artifactId}.map.nid=Map NID
 ${project.parent.artifactId}.btn.export=Export
 ${project.parent.artifactId}.select.viral.load.status=Select viral load status
 ${project.parent.artifactId}.pesquisa.resultados.laboratoriais11=Search Laboratory Results
-${project.parent.artifactId}.openmrs.list.patients=Patients in OpenMRS
+${project.parent.artifactId}.openmrs.list.patients=Patients in EPTS
 ${project.parent.artifactId}.patient=Patient from Disa
 ${project.parent.artifactId}.btn.map=Map
 ${project.parent.artifactId}.select.patient=Select patient to map
@@ -55,7 +55,7 @@ typeMismatch.searchForm.startDate=Start Date is an invalid date
 ${project.parent.artifactId}.error.endDate=End Date must be informed
 NotNull.searchForm.endDate=End Date must be informed
 ${project.parent.artifactId}.not.processing.cause=Cause for Not Processing
-${project.parent.artifactId}.NID_NOT_FOUND=NID does not exist in OpenMRS
+${project.parent.artifactId}.NID_NOT_FOUND=NID does not exist in EPTS
 ${project.parent.artifactId}.NO_RESULT=FSR has no results
 ${project.parent.artifactId}.DUPLICATE_NID=NID duplicated in OpenMRS
 ${project.parent.artifactId}.error.patient.required=Select patient to add
