--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -41,7 +41,7 @@ ${project.parent.artifactId}.map.nid=Mapear NID
 ${project.parent.artifactId}.btn.export=Exportar
 ${project.parent.artifactId}.select.viral.load.status=Insira as datas para a pesquisa
 ${project.parent.artifactId}.pesquisa.resultados.laboratoriais11=Pesquisa de Resultados Laboratoriais
-${project.parent.artifactId}.openmrs.list.patients=Pacientes no OpenMRS
+${project.parent.artifactId}.openmrs.list.patients=Pacientes no SESP
 ${project.parent.artifactId}.patient=Paciente do Disa
 ${project.parent.artifactId}.btn.map=Mapear
 ${project.parent.artifactId}.select.patient=Seleccione um paciente para mapeamento
@@ -55,9 +55,9 @@ typeMismatch.searchForm.startDate=Data Inicial não é válida
 ${project.parent.artifactId}.error.endDate=Data final deve ser informada
 NotNull.searchForm.endDate=Data final deve ser informada
 ${project.parent.artifactId}.not.processing.cause=Causa de não processamento
-${project.parent.artifactId}.NID_NOT_FOUND=NID inexistente no OpenMRS
+${project.parent.artifactId}.NID_NOT_FOUND=NID inexistente no SESP
 ${project.parent.artifactId}.NO_RESULT=FSR sem resultado
-${project.parent.artifactId}.DUPLICATE_NID=NID duplicado no OpenMRS
+${project.parent.artifactId}.DUPLICATE_NID=NID duplicado no SESP
 ${project.parent.artifactId}.error.patient.required=Seleccione o paciente a adicionar
 ${project.parent.artifactId}.error.requestId=O identificador único da amostra deve ser informado
 ${project.parent.artifactId}.requestId=ID da requisição
