DOI-71 Fix table column labels

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -21,8 +21,8 @@ ${project.parent.artifactId}.sisma.code=SISMA Code
 ${project.parent.artifactId}.requesting.facility.name=Requisition Health Unit
 ${project.parent.artifactId}.requesting.district.name=Requisition District
 ${project.parent.artifactId}.referring.request.id=Order number
-${project.parent.artifactId}.created.at=Created on Staging Server
-${project.parent.artifactId}.updated.at=Updated on Staging Server
+${project.parent.artifactId}.created.at=Created on Integration Server
+${project.parent.artifactId}.updated.at=Updated on Integration Server
 ${project.parent.artifactId}.submit=Submit
 ${project.parent.artifactId}.nid=NID
 ${project.parent.artifactId}.gender=Gender
