--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -35,8 +35,8 @@ ${project.parent.artifactId}.sisma.code=Codigo da US
 ${project.parent.artifactId}.requesting.facility.name=US de requisição
 ${project.parent.artifactId}.requesting.district.name=Distrito de requisição
 ${project.parent.artifactId}.referring.request.id=ID de referencimento
-${project.parent.artifactId}.created.at=Criado no Staging Server
-${project.parent.artifactId}.updated.at=Actualizado no Staging Server
+${project.parent.artifactId}.created.at=Criado no servidor de integração
+${project.parent.artifactId}.updated.at=Actualizado no servidor de integração
 ${project.parent.artifactId}.map.nid=Mapear NID
 ${project.parent.artifactId}.btn.export=Exportar
 ${project.parent.artifactId}.select.viral.load.status=Insira as datas para a pesquisa
