DOI-71 Add placeholder message

--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -24,7 +24,8 @@ ${project.parent.artifactId}.viralload.delete.error=Ocorreu um erro inesperado. 
 ${project.parent.artifactId}.viralload.delete.confirmation.javascript=Remover o Resultado ${requestId}?
 ${project.parent.artifactId}.viralload.reschedule=Reagendar
 ${project.parent.artifactId}.viralload.reallocate=Realocar
-${project.parent.artifactId}.viralload.reallocate.successful=Carga Viral realocada com sucesso.
+${project.parent.artifactId}.viralload.reallocate.successful=Carga Viral reallocada com sucesso.
+${project.parent.artifactId}.viralload.reallocate.select.placeholder=Digite o nome da Unidade Sanitária
 ${project.parent.artifactId}.status=Estado
 ${project.parent.artifactId}.frm.status=Estado da Carga Viral
 ${project.parent.artifactId}.location=Localiz.
