--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -37,6 +37,7 @@ ${project.parent.artifactId}.viralload.delete.confirmation.javascript=Delete Lab
 ${project.parent.artifactId}.viralload.reschedule=Reschedule
 ${project.parent.artifactId}.viralload.reallocate=Reallocate
 ${project.parent.artifactId}.viralload.reallocate.successful=Viral Load was reallocated successfully.
+${project.parent.artifactId}.viralload.reallocate.select.placeholder=Type the Health Facility name
 ${project.parent.artifactId}.map.nid=Map NID
 ${project.parent.artifactId}.btn.export=Export
 ${project.parent.artifactId}.select.viral.load.status=Select viral load status
