DOI-71 Add label to manage column

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 ${project.parent.artifactId}.title=Disa_Interoperability
 ${project.parent.artifactId}.map.identifiers=Map Identifiers
 ${project.parent.artifactId}.manage=Query Viral Load Results
+${project.parent.artifactId}.manage.options=Gerir resultados
 ${project.parent.artifactId}.list.viral.load.results=Mapping of Unprocessed Results
 ${project.parent.artifactId}.lista.resultados.laboratoriais333=Laboratory Results List
 ${project.parent.artifactId}.list.viral.load.results.staging.server=Search of Laboratory Results
