DOI-71 Add flash message after reallocate and remove

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,7 +1,7 @@
 ${project.parent.artifactId}.title=Disa_Interoperability
 ${project.parent.artifactId}.map.identifiers=Map Identifiers
 ${project.parent.artifactId}.manage=Query Viral Load Results
-${project.parent.artifactId}.manage.options=Gerir resultados
+${project.parent.artifactId}.manage.options=Manage
 ${project.parent.artifactId}.list.viral.load.results=Mapping of Unprocessed Results
 ${project.parent.artifactId}.lista.resultados.laboratoriais333=Laboratory Results List
 ${project.parent.artifactId}.list.viral.load.results.staging.server=Search of Laboratory Results
@@ -34,8 +34,10 @@ ${project.parent.artifactId}.viralload.result.log= Viral Load Log
 ${project.parent.artifactId}.viralload.result.coded= Viral Load Coded
 ${project.parent.artifactId}.viralload.delete=Delete
 ${project.parent.artifactId}.viralload.delete.error=An unexpected error occurred. Please try again.
+${project.parent.artifactId}.viralload.delete.successful=Viral Load was deleted successfully.
 ${project.parent.artifactId}.viralload.delete.confirmation.javascript=Delete Lab Result ${requestId}?
 ${project.parent.artifactId}.viralload.reschedule=Reschedule
+${project.parent.artifactId}.viralload.reschedule.successful=Viral Load was rescheduled successfully.
 ${project.parent.artifactId}.viralload.reallocate=Reallocate
 ${project.parent.artifactId}.viralload.reallocate.successful=Viral Load was reallocated successfully.
 ${project.parent.artifactId}.viralload.reallocate.select.placeholder=Type the Health Facility name
