--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -1,5 +1,5 @@
 ${project.parent.artifactId}.title=Disa_Interoperabilidade
-${project.parent.artifactId}.manage.options=Manage
+${project.parent.artifactId}.manage.options=Gerir resultados
 ${project.parent.artifactId}.map.identifiers=Mapear Identificadores
 ${project.parent.artifactId}.viral.load.status=Estado de Carga Viral
 ${project.parent.artifactId}.viral.load.status.PROCESSED=PROCESSADO
@@ -22,8 +22,10 @@ ${project.parent.artifactId}.viralload.result.log=Carga Viral Log
 ${project.parent.artifactId}.viralload.result.coded=Carga Viral Coded
 ${project.parent.artifactId}.viralload.delete=Remover
 ${project.parent.artifactId}.viralload.delete.error=Ocorreu um erro inesperado. Por favor, tente novamente.
+${project.parent.artifactId}.viralload.delete.successful=Carga Viral removida com sucesso.
 ${project.parent.artifactId}.viralload.delete.confirmation.javascript=Remover o Resultado ${requestId}?
 ${project.parent.artifactId}.viralload.reschedule=Reagendar
+${project.parent.artifactId}.viralload.reschedule.successful=Carga Viral reagendada com sucesso.
 ${project.parent.artifactId}.viralload.reallocate=Realocar
 ${project.parent.artifactId}.viralload.reallocate.successful=Carga Viral realocada com sucesso.
 ${project.parent.artifactId}.viralload.reallocate.select.placeholder=Digite o nome da Unidade Sanitária
