DOI-71 Translate FLAGGED_FOR_REVIEW

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -61,7 +61,8 @@ NotNull.searchForm.endDate=End Date must be informed
 ${project.parent.artifactId}.not.processing.cause=Cause for Not Processing
 ${project.parent.artifactId}.NID_NOT_FOUND=NID does not exist in EPTS
 ${project.parent.artifactId}.NO_RESULT=FSR has no results
-${project.parent.artifactId}.DUPLICATE_NID=NID duplicated in OpenMRS
+${project.parent.artifactId}.DUPLICATE_NID=NID duplicated in EPTS
+${project.parent.artifactId}.FLAGGED_FOR_REVIEW=Flagged for review
 ${project.parent.artifactId}.error.patient.required=Select patient to add
 ${project.parent.artifactId}.error.requestId=The unique identifier of the sample must be informed
 ${project.parent.artifactId}.requestId=Request ID
