--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -62,6 +62,7 @@ ${project.parent.artifactId}.not.processing.cause=Causa de não processamento
 ${project.parent.artifactId}.NID_NOT_FOUND=NID inexistente no SESP
 ${project.parent.artifactId}.NO_RESULT=FSR sem resultado
 ${project.parent.artifactId}.DUPLICATE_NID=NID duplicado no SESP
+${project.parent.artifactId}.FLAGGED_FOR_REVIEW=Sinalizado p rever
 ${project.parent.artifactId}.error.patient.required=Seleccione o paciente a adicionar
 ${project.parent.artifactId}.error.requestId=O identificador único da amostra deve ser informado
 ${project.parent.artifactId}.requestId=ID da requisição
