DOI-83, DOI-87, DOI-89

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -12,6 +12,7 @@ ${project.parent.artifactId}.viral.load.status=Viral Load Status
 ${project.parent.artifactId}.viral.load.status.PROCESSED=PROCESSED
 ${project.parent.artifactId}.viral.load.status.ALL=ALL
 ${project.parent.artifactId}.viral.load.status.NOT_PROCESSED=NOT PROCESSED
+${project.parent.artifactId}.DUPLICATED_REQUEST_ID=DUPLICATED REQUEST ID
 ${project.parent.artifactId}.viral.load.status.PENDING=PENDING
 ${project.parent.artifactId}.status=Status
 ${project.parent.artifactId}.frm.status=Result Status
