--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -5,6 +5,7 @@ ${project.parent.artifactId}.viral.load.status=Estado de Carga Viral
 ${project.parent.artifactId}.viral.load.status.PROCESSED=PROCESSADO
 ${project.parent.artifactId}.viral.load.status.ALL=TODOS
 ${project.parent.artifactId}.viral.load.status.NOT_PROCESSED=NÃO PROCESSADO
+${project.parent.artifactId}.DUPLICATED_REQUEST_ID=ID DA REQUISIÇÃO DUPLICADO
 ${project.parent.artifactId}.viral.load.status.PENDING=PENDENTE
 ${project.parent.artifactId}.list.viral.load.results=Mapeamento de NIDs de Resultados Não Processados
 ${project.parent.artifactId}.lista.resultados.laboratoriais333=Lista de Resultados Laboratoriais
